--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "require": {
         "ext-json": "*",
         "laravel/framework": "6.*|7.*|8.*|9.*|10.*",
-        "orchid/platform": "*"
+        "orchid/platform": "14.*"
     },
     "require-dev": {
         "roave/security-advisories": "dev-master"
